--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MobileAppDev2025</string>
+    <string name="app_name">Vocab Game</string>
     <string name="stats">Stats</string>
 </resources>
